--- a/CMDB/version1/templates/update.html
+++ b/CMDB/version1/templates/update.html
@@ -11,9 +11,13 @@
 </head>
 <body>
 	<table border='1'>
+	<form method='POST' action='/update'>
 	<tr>
 		<td>用户名</td><td class="dataCo1">{{users.name}}</td>
+		<!--<td>用户名</td><td><input type='text' name='name'  value= {{users.name}}></td>-->
 	</tr>
+		<!--<td>id</td><td><input type='hidden' name='id'  value= {{users.id}}></td>-->
+		<td><input type='hidden' name='id'  value= {{users.id}}>
 	<tr>
 		<td>电话</td><td><input type='text' name='mobile'  value= {{users.mobile}}></td>
 	</tr>
@@ -21,22 +25,21 @@
 		<td>邮箱</td><td><input type='text' name='email'value={{users.email}}></td>
 	</tr>
 	<tr>
-		{%if users.status == 0%}
-		<td>状态</td><td>正常</td>
-		{% else %}
-		<td>状态</td><td>正常</td>
-		{%  endif  %}
 		{%if users.role == 'admin' %}
-	</tr>
-	<tr>
 		<td>角色</td><td>管理员</td>
 		{% else %}
 		<td>角色</td><td>普通用户</td>
 		{%  endif  %}
 	</tr>
-	<form method='POST' action='/update'>
 	<tr>
-	<input type="submit" value="更新">
+		{%if users.status == 0%}
+		<td>状态</td><td>正常</td>
+		{% else %}
+		<td>状态</td><td>正常</td>
+		{%  endif  %}
+	</tr>
+	<tr>
+	<td><input type="submit" value="更新"></td>
 	</tr>
 	</form>
 	</table>
